# LoggingSystem

./: .gitignore  CMakeLists.txt  server.cpp  server.hpp
src/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
test/: CMakeLists.txt  serverTests.cpp
